      the random is but I honestly its amazing what I've done.
    * Created tabs in documentation for proper placement.
-----------------------------------------------------------------------------------------------------------------------
3.0 ** Welcome to 3.0 baby! A lot has changed since 1.0 version. We're now int he automation era.
    * Changes level style. So game consists of stages, and each stage has multiple parts or levels. So stages are
      packs of parts (levels). The first 3 stages are implemented and you can play them right now. The player info like
      health, damage, and bullet speeds transfer over between each part and reset when a stage is done. What about waves?
      Waves will still be implemented on harder stages so parts can still have waves.
    * Player now starts with full health. You lose if you run out of health. If you run out of lives, you reset the stage
      back to part 1. Lives do not carry over between stages like in most games.
    * Renamed some files like LevelPackMaker to Game, ScriptMaker to GameMaker, and LevelpackUnpacker to GamePackUnpacker
      because it just makes more sense. Also outdated folder contains... well outdated code for referencing my hard
      work ;)
    * Constants class saves screen size and applies it to classes that need it
------------------------------------------------------------------------------------------------------------------------
3.1 * Player can now save and load their progress. It saves their stats, stage and part, as well as settings.
    * Player gets passed between parts instead of passing the player values. Player gets reset to defaults after a stage.
    * Moved HUD labels around and added add money, part and time info.
    * Created a game config json file that saves the users screen preference. Changing the screen at settings will update
     it.
    * Moved main menu selections to add a player info panel. Changed some colors yay finally.