@@ -16,66 +16,76 @@ class PlayerPanel:
         self.screen = screen
         self.manager = manager
         self.background = bg
-        self.conf = None
-
-        hud_size = (SW2 - 50, SH2 - 470, 400, 380)
+        self.player = []
+        self.stageinfo = []
+        hud_size = (SW2 - 50, SH2 - 470, 500, 380)
         hud_rect = py.Rect(hud_size)
 
-        hudW = 400
+        hudW = 500
         hudH = 380
-        halfw = int(hudW/2)
+        self.halfw = int(hudW/2)
 
         # todo: container for ui elements
 
-        self.hud = gui.elements.ui_panel.UIPanel(relative_rect=hud_rect, starting_layer_height=3, manager=self.manager,
-                                                 object_id='playerpanel',anchors={'left': 'left',
+        self.playerpanel = gui.elements.ui_panel.UIPanel(relative_rect=hud_rect, starting_layer_height=3, manager=self.manager,
+                                                         object_id='playerpanel', anchors={'left': 'left',
                                                                     'right': 'right',
                                                                     'top': 'top',
                                                                     'bottom': 'bottom'})
 
-        self.title_label = gui.elements.UILabel(relative_rect=py.Rect((120, 10), (120, 30)),
-                                                text='Player Info', manager=self.manager, container=self.hud
+        self.title_label = gui.elements.UILabel(relative_rect=py.Rect((100, 10), (300, 30)),
+                                                text='Player Info: ', manager=self.manager, container=self.playerpanel
                                                 , object_id='paneltitle')
 
-        self.stage_label = gui.elements.UILabel(relative_rect=py.Rect((halfw - 60, 25), (100, 20)),
-                                               text=('Part: ' + str(part) + '/' + str(partmax)),
-                                               manager=self.manager, container=self.hud)
+    def setPlayer(self, db):
 
-        self.time_label = gui.elements.UILabel(relative_rect=py.Rect((halfw + 50, 65), (200, 20)),
-                                               text=('Time: '),
-                                               manager=self.manager, container=self.hud)
+        self.player = db['player']
+        self.stageinfo = db['stage']
+        self.times = db['times']
 
-        self.life_label = gui.elements.UILabel(relative_rect=py.Rect((halfw + 50, 5), (200, 20)),
-                                               text='Lives: 0',
-                                               manager=self.manager, container=self.hud)
+        self.title_label.set_text(str(db['name']))
 
-        self.health_label = gui.elements.UILabel(relative_rect=py.Rect((halfw + 90, 25), (120, 20)),
-                                                 text='Health: 0',
-                                                 manager=self.manager, container=self.hud)
+        self.dob_label = gui.elements.UILabel(relative_rect=py.Rect((25, 70), (220, 20)),
+                                           text=('created: ' + str(self.times[0])), manager=self.manager,
+                                              container=self.playerpanel)
 
-        self.score_label = gui.elements.UILabel(relative_rect=py.Rect((halfw - 60, 65), (100, 20)),
-                                                text='Score: 0',
-                                                manager=self.manager, container=self.hud)
+        self.time2_label = gui.elements.UILabel(relative_rect=py.Rect((200, 70), (220, 20)),
+                                              text=('last saved: ' + str(self.times[1])), manager=self.manager,
+                                              container=self.playerpanel)
 
-        self.money_label = gui.elements.UILabel(relative_rect=py.Rect((halfw + 50, 45), (200, 20)),
-                                                text='Money: 0',
-                                                manager=self.manager, container=self.hud)
+        self.label1 = gui.elements.UILabel(relative_rect=py.Rect((25, 100), (100, 20)),
+                                           text='player info', manager=self.manager, container=self.playerpanel)
 
-        self.wave_label = gui.elements.UILabel(relative_rect=py.Rect((0, 5), (200, 20)),
-                                               text='wave: ',
-                                               manager=self.manager, container=self.hud)
+        self.stage_label = gui.elements.UILabel(relative_rect=py.Rect((25, 120), (200, 20)),
+                                                text=('stage: ' + str(self.stageinfo[0]) + ', part:' +
+                                                     str(self.stageinfo[1])), manager=self.manager,
+                                                container=self.playerpanel)
 
-        self.damage_label = gui.elements.UILabel(relative_rect=py.Rect((0, 25), (200, 20)),
-                                                 text='damage: ',
-                                                 manager=self.manager, container=self.hud)
+        self.lives_label = gui.elements.UILabel(relative_rect=py.Rect((25, 150), (200, 20)),
+                                               text=('lives: '+ str(self.player[3])),
+                                               manager=self.manager, container=self.playerpanel)
 
-        self.bps_label = gui.elements.UILabel(relative_rect=py.Rect((0, 45), (200, 20)),
-                                              text='bullets every: ',
-                                              manager=self.manager, container=self.hud)
+        self.hp_label = gui.elements.UILabel(relative_rect=py.Rect((25, 170), (200, 20)),
+                                                text=('health: ' + str(self.player[1]) + '/' +
+                                                      str(self.player[2])),
+                                                manager=self.manager, container=self.playerpanel)
 
-        self.bspeed_label = gui.elements.UILabel(relative_rect=py.Rect((0, 65), (200, 20)),
-                                                 text='bullet speed: ',
-                                                 manager=self.manager, container=self.hud)
+        self.dam_label = gui.elements.UILabel(relative_rect=py.Rect((25, 200), (200, 20)),
+                                                text=('damage: ' + str(self.player[4])),
+                                                manager=self.manager, container=self.playerpanel)
+
+        self.pspeed_label = gui.elements.UILabel(relative_rect=py.Rect((25, 200), (200, 20)),
+                                              text=('player speed: ' + str(self.player[5])),
+                                              manager=self.manager, container=self.playerpanel)
+
+        self.bspeed_label = gui.elements.UILabel(relative_rect=py.Rect((25, 200), (250, 20)),
+                                                 text=('player speed: ' + str(self.player[6])),
+                                                 manager=self.manager, container=self.playerpanel)
+
+        self.bps_label = gui.elements.UILabel(relative_rect=py.Rect((25, 220), (200, 20)),
+                                                text=('bps: ' + str(self.player[7]) + '/' +
+                                                      str(self.player[8])), manager=self.manager,
+                                              container=self.playerpanel)
 
     def update(self, wave, score, score2, health, health2, lives, damage, bps, bspeed, money, time):
         self.wave_label.set_text(('wave: ' + str(wave) + '/' + str(self.maxWaves)))
