@@ -1,4 +1,28 @@
-{
+{ 
+     "#playertheme":
+     	{
+         "colours":
+         {
+             "dark_bg": "#89CFF0",
+             "normal_text": "#c5cbd8",
+             "text_shadow": "#505050"
+         },
+         "font":
+         {
+	     "name": "gameDev",
+	     "regular_path": "Other/gameDev.ttf",
+             "size": "25",
+             "bold": "0",
+             "italic": "0"
+         },
+         "misc":
+         {
+             "text_shadow": "1",
+             "text_shadow_size": "1",
+             "text_shadow_offset": "0,0"
+         }
+	},
+
      "defaults":
      {
          "colours":
@@ -91,31 +115,27 @@
              "shape_corner_radius": "10",
              "border_width": "1",
              "shadow_width": "15"
-       	  }
-	},
+       	  },
 
 	"paneltitle":
      	{
-         "colours":
+	 "prototype": "#playertheme"
+        }
+       },
+
+	"gamehud":
+	{
+	"colours":
          {
-             "dark_bg": "#89CFF0",
-             "normal_text": "#c5cbd8",
-             "text_shadow": "#505050"
-         },
-         "font":
-         {
-	     "name": "gameDev",
-	     "regular_path": "Other/gameDev.ttf",
-             "size": "25",
-             "bold": "0",
-             "italic": "0"
+             "dark_bg":"#89CFF0",
+             "normal_border": "#999999"
          },
          "misc":
          {
-             "text_shadow": "1",
-             "text_shadow_size": "1",
-             "text_shadow_offset": "0,0"
-         }
-     }
-   
+             "shape": "rounded_rectangle",
+             "shape_corner_radius": "10",
+             "border_width": "1",
+             "shadow_width": "15"
+       	  }
+	}  
 }
